service/svc-nodeport-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
spec:
  type: NodePort
  ports:
  - port: 80          # cluster-IP's port.
    targetPort: 8080
    nodePort: 30123   # accessible through port 30123 of cluster nodes.
  selector:
    app: web
