service/ingress-web-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  tls:
  - hosts:
    - web.example.com
    secretName: tls-secret
  rules:
    - host: web.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-nodeport
              port:
                number: 80
